アクションバーの初期設定クラスを継承させる・メンバー登録のアクティビティ名を変更

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:name=".MemberListActivity"
             android:exported="false" />
         <activity
-            android:name=".MemberRegistActivity"
+            android:name=".MemberAddActivity"
             android:exported="false" />
         <activity
             android:name=".HomeActivity"
