--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Kakeibo"
         tools:targetApi="31">
         <activity
-            android:name=".AddPayReccordActivity"
+            android:name=".AddPayRecordActivity"
             android:exported="false" />
         <activity
             android:name=".BaseActivity"
