--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Kakeibo"
         tools:targetApi="31">
         <activity
+            android:name=".PayPurposeListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PayPurposeAddActivity"
+            android:exported="false" />
+        <activity
             android:name=".SecessionActivity"
             android:exported="false" />
         <activity
