--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Kakeibo"
         tools:targetApi="31">
+
+        <activity android:name=".BaseActivity"
+            android:exported="false"/>
         <activity
             android:name=".BalanceUpdateActivity"
             android:exported="false" />
