--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,15 @@
         tools:targetApi="31">
 
         <activity
+            android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"
+            android:theme="@style/Theme.Material3.DayNight"
+            />
+        <activity
+            android:name="com.google.android.gms.oss.licenses.OssLicensesActivity"
+            android:theme="@style/Theme.Material3.DayNight"
+            />
+
+        <activity
             android:name=".BalanceUpdateActivity"
             android:exported="false" />
         <activity
