--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,11 @@
 
         <activity
             android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"
-            android:theme="@style/Theme.Material3.DayNight"
+            android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
             />
         <activity
             android:name="com.google.android.gms.oss.licenses.OssLicensesActivity"
-            android:theme="@style/Theme.Material3.DayNight"
+            android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
             />
 
         <activity
