--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,8 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+MY_STORE_FILE=keystore.jks
+MY_STORE_PASSWORD=rekadon1
+MY_KEY_ALIAS=kakeiboAppKey
+MY_KEY_PASSWORD=rekadon1
